# flywheel-utilities

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  check_formatting.sh  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: check_formatting.yml
docs/: testing.md
flywheel_utilities/: basic_logging.py  bids.py  download_attachments.py  download_bids.py  download_dicoms.py  download_results.py  fly_wrappers.py  freesurfer.py  metadata.py  resources.py  utils.py
src/flywheel_utilities/: __init__.py  basic_logging.py  bids.py  download_attachments.py  download_bids.py  download_dicoms.py  download_results.py  fly_wrappers.py  freesurfer.py  metadata.py  resources.py  utils.py
tests/: conftest.py  mock_classes.py  test_basic_logging.py  test_bids.py  test_download_bids.py  test_fly_wrappers.py  test_freesurfer.py  test_metadata.py  test_resources.py  test_utilities.py  test_utils.py
