[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flwyheel_utilities"
description = "Package to make interfacing with Flywheel.io simpler. Especially geared towards subject-based analyses"
readme = "README.md"
requires-python = ">3.8"
authors = [{ name = "Aaron Capon", email = "aaron.capon@florey.edu.au" }]
maintainers = [{ name = "Aaron Capon", email = "aaron.capon@florey.edu.au" }]
license = { file = "COPYING" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
  "flywheel_gear_toolkit==0.6.13",
  "flywheel-sdk==16.8.16",
  "psutil==5.9.4",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "flywheel_utilities.__version__"}

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pylint",
    "codespell",
    "pre-commit",
]
test = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/Australian-Epilepsy-Project/flywheel-utilities"

[tool.pylint.messages_control]
disable = 'wrong-import-position,logging-fstring-interpolation,import-error'

[tool.pylint.format]
max-line-length = 100

[tool.pylint.SIMILARITIES]
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true

[tool.pylint.MASTER]
ignore="_version.py"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
